--- a/portfolio/themes/hello-friend-ng/layouts/_default/list.html
+++ b/portfolio/themes/hello-friend-ng/layouts/_default/list.html
@@ -7,7 +7,6 @@
         {{ if .Content }}
             <div class="content">{{ .Content }}</div>
         {{ end }}
-
         {{ range $paginator.Pages.GroupByDate "2006" }}
             <div class="posts-group">
                 <div class="post-year">{{ .Key }}</div>
@@ -16,8 +15,10 @@
                     {{ range .Pages }}
                         <li class="post-item">
                             <a href="{{.Permalink}}">
+                                {{ if ne .Title "" }}
                                 <span class="post-title">{{.Title}}</span>
                                 <span class="post-day">
+                                {{end}}
                                     {{ if .Site.Params.dateformShort }}
                                         {{ .Date.Format .Site.Params.dateformShort }}
                                     {{ else }}
